# revou-final-project-repositories

./: .env  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
server/: .env  README.md  __init__.py  app.py  mail.py  pyproject.toml  requirements.txt  test_app.py  test_email.py
server/app/: app.py  pyproject.toml  test_app.py
server/app/connectors/: mysql_connectors.py
server/app/env/: pyvenv.cfg
server/features/auth/: __init__.py  forms.py  models.py  routes.py
server/features/auth/templates/: email_verification.html  email_verification_success.html
server/features/news/: app.py  routes.py
server/features/service-form/: __init__.py  models.py  routes.py
server/features/service_form/: __init__.py  forms.py  models.py  routes.py
src/: App.tsx  index.css
src/Utils/: AuthProvider.tsx  useAuth.ts
src/assets/style/: Dash_nav.css  Dashboard.css  OurService.css
src/components/BreadCrumbs/: BreadCrumbs.tsx
src/components/CardItems/: CardItems.tsx
src/components/Dashboard nav/: Dash_nav.tsx
src/components/Footer/: Footer.tsx
src/components/Navigation_bar/: Sidebar.tsx  index.tsx
src/components/NewsCard/: NewsCard.tsx
src/components/NewsLetter/: Newsletter.tsx
src/components/Pagination/: Pagination.tsx
src/components/SDG-icon/: Sdg.tsx
src/layout/: DashboardLayout.tsx  MainLayout.tsx
src/routes/: ProtectedRoutes.tsx  index.tsx
src/view/: Dashboard.tsx  HomePage.tsx  Login.tsx  Our-Costumer.tsx  OurService.tsx  Register.tsx  ServiceForm.tsx  Tech-News.tsx  headerSection.tsx
(+5 files in other folders)
